@@ -1,3 +1,8 @@
+2009-12-04 Borut Razem <borut.razem AT siol.net>
+
+	* lib/send-mail.mk, lib/bootstrap.mk:
+	  removed per target logging, send-mail target is noop
+
 2009-10-12 Borut Razem <borut.razem AT siol.net>
 
 	* lib/bootstrap.mk: search makensis in standard locations if
